--- a/src/Components/Body.css
+++ b/src/Components/Body.css
@@ -1,30 +1,3 @@
-.App {
-    text-align: center;
-}
-
-.App-header {
-    background-color: black;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-}
-
-.circle {
-    width: 75px;
-    height: 75px;
-    border-radius: 100%;
-    background-color: yellow;
-    margin: 50px;
-}
-
-.circle.red {
-    background-color: red;
-}
-
-.circle.blue {
-    background-color: cornflowerblue;
+.image1 {
+    width: 200px;
 }
